[23] Remove String Template preview feature #2353 (#2362)
https://github.com/eclipse-jdt/eclipse.jdt.core/pull/2362